--- a/css/media-querys.css
+++ b/css/media-querys.css
@@ -9,9 +9,10 @@
 
     @media (max-width:659px)  {
         li{
-          left:15%;
-          font-size: 1.2em;
+          left:30px;
+          font-size: 1.3em;
           padding: 8px 20px 9px 20px;
+          margin-right: 15px;
 
 
         }
@@ -49,6 +50,8 @@
     @media (max-width:770px){
        #iris{
          left:35%;
+
+
        }
     }
 
@@ -77,18 +80,19 @@
           grid-template-columns: repeat(2,240px);
         }
         .produto{
-          padding-left:18%;
+          padding-left:0px;
         }
     }
-  
+
     @media (max-width:720px) {
 
          .container-cards{
            grid-template-columns:240px;
            grid-template-rows: 310px;
            grid-auto-rows: 310px;
-           margin-left: 10%;
          }
+
+
 
 
     }
