--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,11 @@ li{
   margin-right: 30px;
   display: inline;
   color:white;
-  font-size: 1.3em;
+  font-size: 1.4em;
   position: relative;
   left: 70%;
   padding: 8px 30px 9px 30px;
-  top: 11px;
+  top: 15px;
   font-family: 'Fjalla+One', sans-serif;
   border: solid .5px white;
 }
@@ -23,12 +23,12 @@ li:hover{
 }
 .menu-up{
   margin-top: 20px;
-  position: fixed;
+  position: absolute;
   padding-top:3px;
   box-sizing: border-box;
   background-color: #2d3436;
   width: 100%;
-  height: 50px;
+  height: 60px;
   top: 0px;
   z-index: 1;
 }
@@ -68,6 +68,7 @@ li:hover{
   font-size: 15em;
   color:rgba(99, 110, 114,.8);
   font-family: 'Rubik', sans-serif;
+  width: 80%;
 }
 
 
@@ -112,7 +113,6 @@ li:hover{
   padding: 10px 0 20px 15%;
   top: 700px;
   background: linear-gradient(to bottom,rgba(126, 214, 223,.5),rgba(34, 166, 179,.8));
-  background-repeat: no-repeat;
   margin-top: 3px;
   margin-bottom:10px;
 }
