--- a/css/media-querys.css
+++ b/css/media-querys.css
@@ -25,14 +25,14 @@
            font-size: 12em;
         }
     }
-    @media  (min-width:331px) and (max-width:570px) {
+    @media  (min-width:353px) and (max-width:570px) {
         .titulo-about{
            font-size: 10em;
         }
     }
-    @media (max-width:330px) {
+    @media (max-width:352px) {
         .titulo-about{
-           font-size: 8.1em;
+           font-size: 8em;
         }
     }
 
@@ -75,63 +75,66 @@
 
     /*CONTAINER-CARDS * PRODUTOS*/
 
-    @media (min-width:880px) and (max-width:980px) {
+    @media (min-width:1051px) {
         .produto{
-          padding-left:0px;
-        }
-        .container-cards{
-          grid-template-columns: repeat(2,240px);
+          padding-left: 10% ;
         }
     }
 
-    @media (min-width:981px) and(max-width:1140px){
-        .container-cards{
-          grid-template-columns: repeat(2,240px);
-        }
-        .produto{
-          padding-left: 0 auto;
-        }
-    }
-
-    @media (max-width:720px) {
+    @media(min-width:770px) and (max-width:1050px){
 
          .container-cards{
-           grid-template-columns:240px;
+           grid-template-columns:repeat(3, 220px);
            grid-template-rows: 310px;
            grid-auto-rows: 310px;
-         }
-
-         .produto{
-          padding:5px 0 0 337px;
-
-         }
+           grid-column-gap:25px;
 
 
-    }
+          }
 
-    @media (max-width:380px) {
+          .produto{
+            padding-left: 5%;
+          }
 
 
+}
+
+    @media  (min-width:521px) and (max-width:770px)  {
 
            .container-cards{
-             grid-template-columns:220px;
+             grid-template-columns:repeat(2,220px);
              grid-template-rows: 290px;
-             grid-auto-rows: 310px;
-             aling-items: and ;
+             grid-auto-rows: 290px;
+             grid-column-gap: 35px;
+
+           }
+           .produto{
+
+            padding-left: 4%;
+
+           }
+  }
+
+
+   @media (max-width:520px) {
+
+     .container-cards{
+       grid-template-columns:220px;
+       grid-template-rows: 290px;
+       grid-auto-rows: 290px;
+       grid-column-gap: 20px;
+
+     }
+           .produto{
+             padding-left: 10%;
            }
 
-
-
-    }
+   }
 
 
     /*CONTATO-CONTAINER*/
 
-    @media (max-width:960px){
-       .contato-container{
-         margin-left: 8%;
-       }
-    }
+
 
     @media (min-width:810px) (max-width:960px){
        .contato-container{
@@ -162,13 +165,13 @@
      }
 
     @media (max-width:420px) {
-       .contato-container{
-         margin-left:5%;
-       }
+
        .contato-container{
          grid-template-columns: repeat(1,auto);
-         margin:2px;
-         margin-bottom: 50px;
+         margin: 50px 0px 50px 0px;
+       }
+       .teleEmail{
+         font-size: 2.2em;
        }
    }
 
@@ -177,6 +180,8 @@
    @media (max-width:420px) {
      .endereco{
        font-size: 2.4em;
+
+
      }
 
    }
