--- a/css/media-querys.css
+++ b/css/media-querys.css
@@ -126,7 +126,7 @@
 
      }
            .produto{
-             padding-left: 10%;
+             padding-left: 15%;
            }
 
    }
@@ -134,11 +134,17 @@
 
     /*CONTATO-CONTAINER*/
 
-
-
-    @media (min-width:810px) (max-width:960px){
+  @media ( min-width:961px){
        .contato-container{
-         margin-left: 2%;
+         margin-left: 15%;
+         grid-template-columns: repeat(2,360px);
+
+       }
+  }
+
+    @media (min-width:810px) and (max-width:960px){
+       .contato-container{
+         margin-left: 15%;
        }
        .contato-container{
          grid-template-columns: repeat(2,320px);
@@ -147,7 +153,7 @@
 
     @media (min-width:520px) and (max-width:809px) {
        .contato-container{
-         margin-left: 30%;
+         margin-left:  20%;
        }
        .contato-container{
          grid-template-columns: repeat(1,360px);
@@ -169,22 +175,29 @@
        .contato-container{
          grid-template-columns: repeat(1,auto);
          margin: 50px 0px 50px 0px;
+         padding: 5px;
        }
        .teleEmail{
          font-size: 2.2em;
        }
    }
 
-   /*ENDERECO*/
+     @media (max-width:310px) {
 
-   @media (max-width:420px) {
-     .endereco{
-       font-size: 2.4em;
+         .contato-container{
+           grid-template-columns: repeat(1,auto);
 
+         }
 
+         .teleEmail{
+           font-size: 1.9em;
+
+         }
      }
 
-   }
+   /*ENDERECO*/
+
+
 
    /* FOOTER */
 
