--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-  height: 100%;
+
 }
 
 a{
@@ -181,5 +181,6 @@ li:hover{
   background-color: white;
   color:black;
   padding: 5px;
+  box-sizing: border-box;
   font-size: .9em;
 }
